Updated splash page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@ body {
 <body>
 <table width="887" height="481" border="4" align="center" bordercolor="#FFFF00">
   <tr>
-    <td><p align="center"><img src="/images/iddlogo.gif"></p>
+    <td><p align="center"><img src="/images/masthead.jpg"></p>
       <p align="center" class="style4">This site is currently </p>
       <p align="center"><img src="/images/underconstruction.gif" width="505" height="37"></p>
 
