--- a/public/javascripts/tiny_mce/plugins/curblyadvimage/image.htm
+++ b/public/javascripts/tiny_mce/plugins/curblyadvimage/image.htm
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>{#advimage_dlg.dialog_title}</title>
     <script language="javascript" type="text/javascript" src="../../../jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="../../../jquery_ujs.js"></script>
+    
     <script type="text/javascript" src="../../tiny_mce_popup.js"></script>
     <script type="text/javascript" src="../../utils/mctabs.js"></script>
     <script type="text/javascript" src="../../utils/form_utils.js"></script>
@@ -43,7 +45,7 @@
           <fieldset>
 	    <legend>Available Images</legend>
             <script type="text/javascript">//<![CDATA[
-                $.ajax({type: "GET", url: "/attachments/manage?media=print", dataType: "script"});
+                //$.ajax({type: "GET", url: "/attachments/manage?media=print", dataType: "script"});
                 //]]></script>
 
             <div id="dynamic_images_list">
